unpackaged/main/default/objects/Concept_Coach_Course__c/Concept_Coach_Course__c.object-meta.xml
<CustomObject>
    <label>Concept Coach Course</label>
    <nameField>
        <label>Concept Coach Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Concept Coach Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>