unpackaged/main/default/objects/Concept_Coach_Course__c/fields/Active_Teachers__c.field-meta.xml
<CustomField>
    <fullName>Active_Teachers__c</fullName>
    <label>Active Teachers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>