unpackaged/main/default/objects/Concept_Coach_Course__c/fields/Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Book_Name__c</fullName>
    <label>Book Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>