unpackaged/main/default/objects/Concept_Coach_Course__c/fields/Class_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Start_Date__c</fullName>
    <label>Class Start Date</label>
    <type>Date</type>
</CustomField>