unpackaged/main/default/objects/Concept_Coach_Course__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Concept Coach Courses</relationshipLabel>
    <relationshipName>Concept_Coach_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>