unpackaged/main/default/objects/Concept_Coach_Course__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <label>External ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>