unpackaged/main/default/objects/Concept_Coach_Course__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Concept Coach Courses</relationshipLabel>
    <relationshipName>Concept_Coach_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>