unpackaged/main/default/objects/Concept_Coach_Course__c/fields/Students_Using__c.field-meta.xml
<CustomField>
    <fullName>Students_Using__c</fullName>
    <label>Students Using</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>