unpackaged/main/default/objects/Concept_Coach_Course__c/fields/TermYear__c.field-meta.xml
<CustomField>
    <fullName>TermYear__c</fullName>
    <label>TermYear</label>
    <length>30</length>
    <type>Text</type>
</CustomField>